--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 title: "Her Bird"
 email: "support@herbird.com"
 description: "High-end boutique for sophisticated fashion"
-baseurl: ""
-url: "http://localhost:4000"
-twitter_username: "herbird"
-github_username: "herbird"
+baseurl: "/Her-Bird"
+url: "https://rinshad-gif.github.io"
+# twitter_username: "herbird"
+# github_username: "herbird"
 
 # Build settings
 theme: null
