testing anchor tag routing dubug fix

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 - name: "Home"
-  link: "index.html"
+  link: "/"
 - name: "Products"
-  link: "/products.html"
+  link: "/products/"
 - name: "Exclusive"
   link: "/exclusive-products/"
 - name: "Clients"
