--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,7 +1,9 @@
 backend:
-  name: git-gateway
+  name: github
   repo: rinshad-gif/Her-Bird
   branch: main
+  auth_type: implicit
+  app_id: Ov23liE7Uq13Bj7wC5P9
 
 media_folder: "assets/images/uploads"
 public_folder: "/assets/images/uploads"
