--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ email: "support@herbird.com"
 description: "High-end boutique for sophisticated fashion"
 
 # Standard Jekyll configuration for GitHub Pages subfolder
-baseurl: ""
-
+baseurl: "/Her-Bird"
+url: "https://rinshad-girl.github.io"
 
 # --- NETLIFY CMS CONFIGURATION ---
 # Netlify CMS is expected to be available at /admin/
