--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,7 +2,8 @@ backend:
   name: github
   repo: rinshad-gif/Her-Bird
   branch: main
-  auth_endpoint: https://github-auth.decapcms.org/auth
+  base_url: https://github-auth.decapcms.org
+  auth_endpoint: /auth
 
 media_folder: "assets/images/uploads"
 public_folder: "/Her-Bird/assets/images/uploads"
