--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,6 +2,7 @@ backend:
   name: github
   repo: rinshad-gif/Her-Bird
   branch: main
+  base_url: https://github-auth.decapcms.org
   auth_endpoint: https://github-auth.decapcms.org/auth
 
 media_folder: "assets/images/uploads"
