vercel auth add to admin-onfig 2

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,8 +2,8 @@ backend:
   name: github
   repo: rinshad-gif/Her-Bird
   branch: main
-  # base_url: 
-  auth_endpoint: https://decap-oauth-21vi.vercel.app/api/auth
+  base_url: https://decap-oauth-21vi.vercel.app/api/auth
+  auth_endpoint: /api/auth
 
 media_folder: "assets/images/uploads"
 public_folder: "/Her-Bird/assets/images/uploads"
