--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,13 +2,13 @@ backend:
   name: github
   repo: rinshad-gif/Her-Bird
   branch: main
-  base_url: https://decap-oauth-21vi.vercel.app/api/auth
+  base_url: https://decap-oauth-21vi.vercel.app
   auth_endpoint: /api/auth
 
-media_folder: "assets/images/uploads"
-public_folder: "/Her-Bird/assets/images/uploads"
+  media_folder: "assets/images/uploads"
+  public_folder: "/Her-Bird/assets/images/uploads"
 
-publish_mode: editorial_workflow
+  publish_mode: editorial_workflow
 
 collections:
   - name: "products"
