vercel auth add to admin-onfig 15

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,11 +3,11 @@ backend:
   repo: rinshad-gif/Her-Bird
   branch: main
   base_url: https://decap-oauth-21vi.vercel.app
-  auth_endpoint: /api/auth
+  auth_endpoint: api/auth
   auth_scope: repo
 
-media_folder: "assets/images/uploads"
-public_folder: "/assets/images/uploads"
+media_folder: assets/images/uploads
+public_folder: /Her-Bird/assets/images/uploads
 
 publish_mode: editorial_workflow
 
