Repo name changed so base url changed to null

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email: "support@herbird.com"
 description: "High-end boutique for sophisticated fashion"
 
 url: "https://rinshad-gif.github.io"
-baseurl: "/Her-Bird"
+baseurl: ""
 
 theme: null
 plugins:
