--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,10 @@ defaults:
       sitemap: true
 
 include:
+  - _pages
+  - _products
+  - _exclusive_products
+  - _testimonials
   - admin
 
 exclude:
@@ -56,5 +60,3 @@ exclude:
   - vendor
   - .sass-cache/
   - .jekyll-cache/
-
-
