--- a/_config.yml
+++ b/_config.yml
@@ -28,18 +28,26 @@ defaults:
       type: "products"
     values:
       layout: "product-details"
+      sitemap: false        # ✅ ADD
 
   - scope:
       path: "_exclusive_products"
       type: "exclusive_products"
     values:
       layout: "product-details"
+      sitemap: false        # ✅ ADD
 
   - scope:
       path: "_testimonials"
       type: "testimonials"
     values:
       layout: "page"
+      sitemap: false        # ✅ ADD
+
+  - scope:
+      path: "_pages"
+    values:
+      sitemap: false        # ✅ ADD
 
   - scope:
       path: ""
@@ -60,10 +68,3 @@ exclude:
   - vendor
   - .sass-cache/
   - .jekyll-cache/
-
-sitemap:
-  exclude:
-    - "/_products/"
-    - "/_exclusive_products/"
-    - "/_testimonials/"
-    - "/_pages/"
